# weasel

./: Cargo.toml  README.md
src/: main.rs  weasel.rs
