[package]
name = "weasel"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Bockisch <nbockisch@protonmail.com>"]
license = "GPL-2.0-or-later"
readme = "README.md"
repository = "https://github.com/nbockisch/weasel"
description = "An implementation of the Weasel genetic algorithm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
